create site for flashcards using bootstrap,css,jquery and added styling

--- a/index.html
+++ b/index.html
@@ -10,13 +10,144 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container-fluid">
         <div class="jumbotron">
           <h1>Coding Flash Cards</h1>
         </div>
       </div>
     </header>
-    <main
+    <main class="container-fluid">
+      <!-- First Row -->
+     <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="javascript">Javascript</h3>
+            <p class="comments">JavaScript is a programming language that allows you to implement complex things on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates, or interactive maps, or animated 2D/3D graphics, or scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third layer of the layer cake of standard web technologies, two of which (HTML and CSS) we have covered in much more detail in other parts of the Learning Area.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="operators">Operators</h3>
+            <p class="comments2">A binary or ternary operator appears between its arguments. Operators in java fall into 8 different categories: Java operators fall into eight different categories: assignment, arithmetic, relational, logical, bitwise, compound assignment, conditional, and type.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="variables">Variable</h3>
+            <p class="comments3">A Java variable is a piece of memory that can contain a data value. A variable thus has a data type. Data types are covered in more detail in the text on Javadata types. Variables are typically used to store information which your Java program needs to do its job</p>
+          </div>
+        </div>
+    </div>
+    <!-- Second Row -->
+    <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="vnc">Variable Naming Conventions</h3>
+            <p class="comments4">In computer programming, a naming convention is a set of rules for choosing the character sequence to be used for identifiers which denote variables, types, functions, and other entities in source code and documentation.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="functions">Functions</h3>
+            <p class="comments5">Function or a method is a named callable piece of code which performs some operations and optionally returns a value. In C language the term function is used.Java & C# people would say it a method (and a function in this case is defined within a class/object).</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="methods">Methods</h3>
+            <p class="comments6">A method is a set of code which is referred to by name and can be called (invoked) at any point in a program simply by utilizing the method's name. Think of a method as a subprogram that acts on data and often returns a value.</p>
+          </div>
+        </div>
+     </div>
+    <!-- Third Row -->
+     <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="arguments">Arguments</h3>
+            <p class="comments7">actual argument, argument, actual parameter, parameter. The values that are passed to a method are called actual arguments in the Java specification. However, it is very common for them to be called just arguments, actual parameters, or just plain parameters.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="parameters">Parameters</h3>
+            <p class="comments8">In Java, parameters sent to methods are passed-by-value: Definition clarification: What is passed "to" a method is referred to as an "argument". The "type" of data that a method can receive is referred to as a "parameter".</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="return">Return</h3>
+            <p class="comments9">A call out to get a response from a function.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Fourth Row -->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="changeMethod">Change Method</h3>
+            <p class="comments10">In Java, you can use the Change Method Signature refactoring to: Change themethod name, return type and visibility scope. Add new parameters and remove the existing ones. ... Reorder parameters.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="strings">Strings</h3>
+            <p class="comments11">Strings. Strings, which are widely used in Java programming, are a sequence of characters. In the Java programming language, strings are objects. The Javaplatform provides the String class to create and manipulate strings.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="boolean">Boolean</h3>
+            <p class="comments12">In Java, there is a variable type for Boolean values: boolean user = true; So instead of typing int or double or string, you just type boolean (with a lower case "b"). After the name of you variable, you can assign a value of either true or false. Notice that the assignment operator is a single equals sign ( = ).</p>
+          </div>
+        </div>
+     </div>
+     <!-- Fifth Row -->
+     <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="undefined">Undefined</h3>
+            <p class="comments13">In JavaScript, undefined means a variable has been declared but has not yet been assigned a value, such as: var TestVar; alert(TestVar); //shows undefinedalert(typeof TestVar); //shows undefined. null is an assignment value.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="escape">Escape</h3>
+            <p class="comments14">If you want to put a quote inside a string</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="alert1">Alert</h3>
+            <p class="comments15">JavaScript - Dialog Boxes. Advertisements. JavaScript supports three important types of dialog boxes. These dialog boxes can be used to raise and alert, or to get confirmation on any input or to have a kind of input from the users.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Sixth Row -->
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="comments1">Comments</h3>
+            <p class="comments16">Java Comments. The java comments are statements that are not executed by the compiler and interpreter. The comments can be used to provide information or explanation about the variable, method, class or any statement. It can also be used to hide program code for specific time.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="jquery">jQuery</h3>
+            <p class="comments17">jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="panel panel-info">
+            <h3 class="attributes">Attributes</h3>
+            <p class="comments18">An attribute is another term for a field. It's typically a public constant or a public variable that can be accessed directly. In this particular case, the array in Java is actually an object and you are accessing the public constant value that represents the length of the array.</p>
+          </div>
+        </div>
+      </div>
+     </div>
+
+
+    </main>
+
 
   </body>
 </html>
